--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ button {
 
 section {
     background-color: rgba(245, 245, 245);
+    transition: all 300ms ease;
 }
 
 input, textarea {
@@ -126,6 +127,40 @@ input:focus, textarea:focus {
 .link__hover-effect:hover:after {
     left: 0;
     width: 100%;
+}
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para
+{
+    color: white;
+}
+
+.dark-theme section {
+    background-color: #242424;
+}
+
+.dark-theme #personal__logo {
+    filter: none;
+
+}
+
+.dark-theme .scroll__icon {
+    border-color: white;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after {
+    background-color: white;
+
+}
+
+.dark-theme .mail__btn {
+    background-color: white;
+    color: #242424;
 }
 
 /* Landing Page */
@@ -294,12 +329,22 @@ nav {
     width: 90%;
     max-width: 1100px;
     height: 510px;
-    box-shadow: 0 20px 80px 0 rgba(0, 0, 0, 0.55);
     border-radius: 20px;
     overflow: hidden;
     display: flex;
+    visibility: hidden;
+    z-index: -1;
+    transition: visibility 1s, z-index 1s box-shadow 0.5 ease;
 
 }
+
+.modal--open .modal {
+    z-index: 60;
+    box-shadow: 0 20px 80px 0 rgba(0, 0, 0, 0.55);
+    visibility: visible;
+
+}
+
 
 .modal__half {
     width: 50%;
@@ -308,15 +353,18 @@ nav {
     flex-direction: column;
     justify-content: center;
     position: relative;
-
-
+    transition: all 300ms ease-in;
 }
 
-
+.modal--open .modal__about,
+.modal--open .modal__contact
+ {
+    transform: translateX(0%);
+}
 
 .modal__about {
     background-color: rgb(245, 245, 245);
-    
+    transform: translateX(-110%);    
 }
 
 .modal__languages {
@@ -358,6 +406,7 @@ nav {
 .modal__contact {
     background-color: #242424;
     color: white;
+    transform: translateX(110%);
 }
 
 .modal__title {
@@ -410,7 +459,7 @@ font-size: 26px;
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     z-index: -1;
@@ -431,6 +480,11 @@ font-size: 26px;
         text-align: center;
         padding: 28px;
     }    
+
+    .modal__overlay--visible {
+        z-index: 1;
+        display: flex;
+    }
 
 
 
@@ -464,6 +518,7 @@ font-size: 26px;
     text-align: center;
     font-size: 48px;
     margin-bottom: 60px;
+    transition: all 300ms ease;
 
 }
 
@@ -578,3 +633,53 @@ padding: 6% 0;
 }
 
 
+/* Shapes */
+
+.shape {
+    position: fixed;
+}
+
+.shape--0 {
+    top: 15vh;
+    left: 1vw;
+}
+
+.shape--1 {
+    top: 5vh;
+    left: 50vw;
+}
+
+.shape--2 {
+    top: 35vh;
+    left: 80vw;
+}
+
+.shape--3 {
+    top: 50vh;
+    left: 1vw;
+}
+
+.shape--4 {
+    top: 50vh;
+    left: 50vw;
+}
+
+.shape--5 {
+    top: 50vh;
+    left: 80vw;
+}
+
+.shape--6 {
+     top: 85vh;
+     left: 5vw;
+}
+
+.shape--7 {
+    top: 80vh;
+    left: 50vw;
+}
+
+.shape--8 {
+    top: 80vh;
+    left: 80vw;
+}
