--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,23 @@ input:focus, textarea:focus {
     width: 100%;
 }
 
+nav, 
+.scroll, 
+.header {
+    opacity: 1;
+    visibility: visible;
+    transition: all 600ms 800ms;
+}
+
+.modal--open nav, 
+.modal--open .scroll, 
+.modal--open .header {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 400ms;
+}
+
+
 .dark-theme .title,
 .dark-theme .section__title,
 .dark-theme .section__sub-title,
@@ -292,7 +309,7 @@ nav {
 #personal-logo {
     height: 50px;
     width: 50px;    
-    filter: invert(1);
+    filter: invert(0);
 }
 
 .nav__link--list {
